# sheet_to_solfa

./: .gitignore  README.md
backend/: .env.example  .gitignore  env.template  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: export.py  jobs.py  upload.py
backend/app/core/: config.py  storage.py
backend/app/models/: __init__.py  job.py  note.py  solfa.py
backend/app/pipeline/: __init__.py  intake.py  preprocess.py  renderer.py  solfa.py  symbolic.py  theory.py
backend/app/pipeline/omr/: __init__.py  base.py  basic_omr.py  gemini_engine.py  oemer_engine.py
backend/app/workers/: __init__.py  processor.py
backend/tests/: __init__.py
frontend/: .env.example  .gitignore  env.local.template  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/job/[id]/: page.tsx
frontend/src/app/result/[id]/: page.tsx
frontend/src/components/: DownloadPanel.tsx  FileUploader.tsx  ProcessingStatus.tsx  SolfaDisplay.tsx
frontend/src/components/solfa/: MeasureBar.tsx  SolfaLegend.tsx  SolfaNote.tsx
frontend/src/lib/: api.ts  audio.ts  solfa-colors.ts
